--- a/Into_VSCode/htmlSample_1.html
+++ b/Into_VSCode/htmlSample_1.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alert Example</title>
+    <title>¡¡¡Alert Example</title>
 </head>
 <body>
-    <h3>Alert Examples in VS Code</h3>
+    <h3>Alert Examples in VS Code!!!</h3>
     <strong>Succes!</strong> 
-    <strong>Info!</strong>
     <strong>Warning!</strong>
-    <strong>Danger!</strong>   
+    <strong>Danger!</strong>
+    <strong>Extra1!</strong>
+    <strong>Extra2!</strong>
 </body>
 </html>
